AVKM-0001 feat(front): Implementacao da lógica do FrontEnd.

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.vkly.srv.alura.music</groupId>
-	<artifactId>mcvk</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>vkly</artifactId>
+	<version>0.0.2-SNAPSHOT</version>
 	<name>mcvk</name>
 	<description>Projeto de Java Spring Boot com JPA</description>
 	<properties>
@@ -19,19 +19,25 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!--		<dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-data-jpa</artifactId>
+                </dependency>-->
+
+		<!--		<dependency>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <scope>runtime</scope>
+                </dependency>-->
 	</dependencies>
 
 	<build>
