--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=mcvk
+spring.datasource.url=jdbc:postgresql://localhost/avkm
+spring.datasource.username=postgres
+spring.datasource.password=vkl
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+
